Add Weka integration (requires docker-compose build)
Now we can use Weka's classes and methods.

The additional dokerfile/requirements include java, weka, and a few python dependencies.

The java version is an LTS one, but was pulled from the default debian package repo for a security vulnerability - the new lines ask for this version explicitly.

Soon: fixing the classifier input in the final cell (to fix the classifier output).

--- a/jupyter/notebooks/modeling/assessment-DMML.ipynb
+++ b/jupyter/notebooks/modeling/assessment-DMML.ipynb
@@ -799,6 +799,174 @@
     "Class 7 punches above its weight as the most abundant misclassification which is perhaps due to the relative infrequency of data for class 7. There must be some other factor, as there are less populated classes.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Complex Bayesian Networks\n",
+    "\n",
+    "scikit learn has naive bayes builtin, but not the more complex networks. Weka can be called on to fill the gap."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### K2 Algorithm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import weka.core.jvm as jvm\n",
+    "\n",
+    "jvm.start()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# I added the str call to this line (HM):\n",
+    "# arffList.append(\"@attribute \" + str(df.columns[i]) + \" real\\n\") \n",
+    "\n",
+    "# ---\n",
+    "\n",
+    "# https://github.com/saurabhnagrecha/Pandas-to-ARFF\n",
+    "\n",
+    "# MIT License\n",
+    "\n",
+    "# Copyright (c) [2015] [Saurabh Nagrecha]\n",
+    "\n",
+    "# Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n",
+    "\n",
+    "# The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n",
+    "\n",
+    "# THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.\n",
+    "\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "def pandas2arff(df,filename,wekaname = \"pandasdata\",cleanstringdata=True,cleannan=True):\n",
+    "    \"\"\"\n",
+    "    converts the pandas dataframe to a weka compatible file\n",
+    "    df: dataframe in pandas format\n",
+    "    filename: the filename you want the weka compatible file to be in\n",
+    "    wekaname: the name you want to give to the weka dataset (this will be visible to you when you open it in Weka)\n",
+    "    cleanstringdata: clean up data which may have spaces and replace with \"_\", special characters etc which seem to annoy Weka. \n",
+    "                     To suppress this, set this to False\n",
+    "    cleannan: replaces all nan values with \"?\" which is Weka's standard for missing values. \n",
+    "              To suppress this, set this to False\n",
+    "    \"\"\"\n",
+    "    import re\n",
+    "    \n",
+    "    def cleanstring(s):\n",
+    "        if s!=\"?\":\n",
+    "            return re.sub('[^A-Za-z0-9]+', \"_\", str(s))\n",
+    "        else:\n",
+    "            return \"?\"\n",
+    "            \n",
+    "    dfcopy = df #all cleaning operations get done on this copy\n",
+    "\n",
+    "    \n",
+    "    if cleannan!=False:\n",
+    "        dfcopy = dfcopy.fillna(-999999999) #this is so that we can swap this out for \"?\"\n",
+    "        #this makes sure that certain numerical columns with missing values don't get stuck with \"object\" type\n",
+    " \n",
+    "    f = open(filename,\"w\")\n",
+    "    arffList = []\n",
+    "    arffList.append(\"@relation \" + wekaname + \"\\n\")\n",
+    "    #look at each column's dtype. If it's an \"object\", make it \"nominal\" under Weka for now (can be changed in source for dates.. etc)\n",
+    "    for i in range(df.shape[1]):\n",
+    "        if dfcopy.dtypes[i]=='O' or (df.columns[i] in [\"Class\",\"CLASS\",\"class\"]):\n",
+    "            if cleannan!=False:\n",
+    "                dfcopy.iloc[:,i] = dfcopy.iloc[:,i].replace(to_replace=-999999999, value=\"?\")\n",
+    "            if cleanstringdata!=False:\n",
+    "                dfcopy.iloc[:,i] = dfcopy.iloc[:,i].apply(cleanstring)\n",
+    "            _uniqueNominalVals = [str(_i) for _i in np.unique(dfcopy.iloc[:,i])]\n",
+    "            _uniqueNominalVals = \",\".join(_uniqueNominalVals)\n",
+    "            _uniqueNominalVals = _uniqueNominalVals.replace(\"[\",\"\")\n",
+    "            _uniqueNominalVals = _uniqueNominalVals.replace(\"]\",\"\")\n",
+    "            _uniqueValuesString = \"{\" + _uniqueNominalVals +\"}\" \n",
+    "            arffList.append(\"@attribute \" + df.columns[i] + _uniqueValuesString + \"\\n\")\n",
+    "        else:\n",
+    "            arffList.append(\"@attribute \" + str(df.columns[i]) + \" real\\n\") \n",
+    "            #even if it is an integer, let's just deal with it as a real number for now\n",
+    "    arffList.append(\"@data\\n\")           \n",
+    "    for i in range(dfcopy.shape[0]):#instances\n",
+    "        _instanceString = \"\"\n",
+    "        for j in range(df.shape[1]):#features\n",
+    "                if dfcopy.dtypes[j]=='O':\n",
+    "                    _instanceString+=\"\\\"\" + str(dfcopy.iloc[i,j]) + \"\\\"\"\n",
+    "                else:\n",
+    "                    _instanceString+=str(dfcopy.iloc[i,j])\n",
+    "                if j!=dfcopy.shape[1]-1:#if it's not the last feature, add a comma\n",
+    "                    _instanceString+=\",\"\n",
+    "        _instanceString+=\"\\n\"\n",
+    "        if cleannan!=False:\n",
+    "            _instanceString = _instanceString.replace(\"-999999999.0\",\"?\") #for numeric missing values\n",
+    "            _instanceString = _instanceString.replace(\"\\\"?\\\"\",\"?\") #for categorical missing values\n",
+    "        arffList.append(_instanceString)\n",
+    "    f.writelines(arffList)\n",
+    "    f.close()\n",
+    "    del dfcopy\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import weka.core.classes as wkcore\n",
+    "from weka.classifiers import Classifier\n",
+    "import os\n",
+    "\n",
+    "# cls = Classifier(classname=\"weka.classifiers.trees.J48\", options=[\"-C\", \"0.3\"])\n",
+    "\n",
+    "cmdline = 'weka.classifiers.bayes.BayesNet -D -Q weka.classifiers.bayes.net.search.local.TAN -- -S BAYES -E weka.classifiers.bayes.net.estimate.SimpleEstimator -- -A 0.5'\n",
+    "classifier = wkcore.from_commandline(cmdline, classname=\"weka.classifiers.Classifier\")\n",
+    "# classifier.build_classifier(iris_data)\n",
+    "\n",
+    "# weka.classifiers.bayes.BayesNet -D -Q weka.classifiers.bayes.net.search.local.TAN -- -S BAYES -E weka.classifiers.bayes.net.estimate.SimpleEstimator -- -A 0.5\n",
+    "print(classifier.options)\n",
+    "\n",
+    "# Attempt to convert type formats without intermediate file (failed)\n",
+    "# from scipy.io import arff\n",
+    "# from io import StringIO\n",
+    "# x_train_20_str = StringIO(X_train_20)\n",
+    "# data_xtr20, meta_xtr20 = arff.loadarff(X_train_20)\n",
+    "# df_data = pd.DataFrame(data_xtr20)\n",
+    "\n",
+    "pandas2arff(X_train_20, 'pandasdata.arff')\n",
+    "\n",
+    "# receive arff\n",
+    "from weka.core.converters import Loader\n",
+    "loader = Loader(classname=\"weka.core.converters.ArffLoader\")\n",
+    "arffData = loader.load_file(os.getcwd() + '/' + 'pandasdata.arff')\n",
+    "arffData.class_is_last()\n",
+    "\n",
+    "# clean up\n",
+    "os.remove('pandasdata.arff')\n",
+    "\n",
+    "# classifier.build_classifier(arffData) #TODO hama fix \"class is numeric\" error that this spews\n",
+    "\n",
+    "print(arffData)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -817,7 +985,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
